--- a/src/runtime/assets/main.css
+++ b/src/runtime/assets/main.css
@@ -1,5 +1,6 @@
-@import 'tailwindcss' theme(static);
-@import '@nuxt/ui-pro';
+@import 'tailwindcss';
+@import 'tailwindcss/theme.css' theme(static);
+@import '@nuxt/ui';
 @import './flex-utilities.css';
 @import './owl-utilities.css';
 
